# mlops

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fl_client.py  fl_server.py  pyproject.toml  run.py  serve.py  setup.cfg
.github/workflows/: github_pages.yml  test.yml
containers/: cuda:11.7.1-runtime-ubuntu20.04.dockerfile
docs/: index.md
example/: main.py  mlconf.json  process.py
example_apriori/: main.py
example_fl/: fl_client.py  fl_server.py  main.py  mlconf.json
mlops/: __init__.py  app.py
tests/: test_example.py
