[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["your_name@example.com"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.28.0"
scikit-learn = "^1.1.2"
pydantic = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
